tests/baselines/reference/errorForConflictingExportEqualsValue.errors.txt
/a.ts(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== /a.ts (1 errors) ====
    export var x;
    export = x;
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    import("./a");
    